MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/action-icon.scss
@import "../../map_modules/variables";


.action-icon-container,
.action-icon-container-inline {
    margin-left: .5em !important;
    cursor: pointer;

    .action-icon {
        pointer-events: none;
        height: 1.5em;
        width: 1.5em;

        &:hover {
            color: darken($charcoal, 15%);
        }
    }

    &.disabled svg.action-icon {
        color: $grey !important;
    }
}

.action-icon-container {
    display: flex;
}

.action-icon-container-inline {
    display: inline;
}

.action-icon-button-container {
    display: inline;
    padding: .42em;
    border-radius: 50%;
    margin-left: .5em;
    cursor: pointer;

    .action-icon-container-inline {
        margin: 0 !important;
    } 
    
    svg {
        color: $white;
    }

    &.green {
        background-color: $green;
    }

    &.blue {
        background-color: $blue;
    }

    &.red {
        background-color: $red;
    }
}

